<resources>
    <string name="app_name">Afritech Media</string>
    <string name="adUnit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="retry">Retry</string>
    <string name="nav_head">Navigation header</string>
    <string name="fb">Facebook</string>
    <string name="youtube">YouTube</string>
    <string name="ig">Instagram</string>
    <string name="linkdin">LinkedIn</string>
    <string name="gplus">Google+</string>
    <string name="recom">Recommended</string>
    <string name="emus">Email Us</string>
    <string name="conus">Contact Us</string>
    <string name="rfrsh">Refresh</string>
    <string name="share">share</string>
    <string name="whatsapp_help_number">+254774760300</string>
    <string name="please_install_whatsapp">Please install WhatsApp</string>
    <string name="whatsapp">WhatsApp Us</string>
    <string name="linkedin">Linkedin</string>
    <string name="afritech_media">Afritech Media Services</string>
    <string name="technology_artificial_intelligence_cybersecurity_telco_ict_business"><![CDATA[Technology | Artificial Intelligence | Cyber security | Telco & ICT Business]]></string>
    <string name="afritech_blog_covers_emerging_trends_in_in_kenya_and_across_africa">Emerging trends in </string>
    <string name="in_kenya_and_across_africa">across Africa.</string>
    <string name="follow_us_on">Follow Us:</string>
    <string name="how_to">How To</string>
    <string name="financial_tech"><![CDATA[Financial & Tech]]></string>
    <string name="gadget_review">Gadget Review</string>
    <string name="social_media">Social Media</string>
    <string name="our_services">Our Services</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="copyright_169_2022">Copyright © 2022</string>
    <string name="home">Home</string>
</resources>
