<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_how_to"
            android:title="@string/how_to" />
        <item
            android:id="@+id/nav_financial"
            android:title="@string/financial_tech" />
        <item
            android:id="@+id/nav_gadget"
            android:title="@string/gadget_review" />
        <item
            android:id="@+id/nav_social_media"
            android:title="@string/social_media"/>
        <item
            android:id="@+id/nav_afritech"
            android:title="@string/our_services"/>
    </group>

</menu>
