<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_whatsapp"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_icons8_whatsapp"
        android:title="@string/whatsapp"/>
    <item
        android:id="@+id/action_Contact"
        android:orderInCategory="300"
        android:icon="@drawable/baseline_call_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/conus"/>
    <item
        android:icon="@drawable/refresh"
        app:showAsAction="ifRoom"
        android:title="@string/rfrsh"
        android:orderInCategory="100"
        android:id="@+id/refresh"/>

</menu>
